--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/EHB-MCT/web2-frontend-RhysDevalckeneer/issues"
   },
-  "homepage": "https://github.com/EHB-MCT/web2-frontend-RhysDevalckeneer#readme"
+  "homepage": "https://github.com/EHB-MCT/web2-frontend-RhysDevalckeneer#readme",
+  "devDependencies": {
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1"
+  }
 }
