📦️ Updated packages file

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
+    "css-loader": "^6.5.1",
     "lodash": "^4.17.21",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "style-loader": "^3.3.1"
   }
 }
