--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node,git,visualstudiocode,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,git,visualstudiocode,macos,windows
 
+config.js
+
 ### Git ###
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
