--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "chart": "^0.1.2",
+    "chart.js": "^3.6.2",
     "path": "^0.12.7",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
